update sight word app

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 </head>
 
 <body>
+  <!-- Background Photo Decorations -->
+  <div class="bg-photos" aria-hidden="true">
+    <div class="bg-photo bg-photo-1"></div>
+    <div class="bg-photo bg-photo-2"></div>
+    <div class="bg-photo bg-photo-3"></div>
+  </div>
+
   <div id="app">
 
     <!-- ====== Screen: Level Selection ====== -->
