fix: streak banner non-blocking, add mute button, fix iPad double-flip

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <button class="btn-back" id="btn-back" aria-label="返回">←</button>
         <div class="study-level-name" id="study-level-name">Pre-K</div>
         <div class="study-counter" id="study-counter">1/40</div>
+        <button class="btn-mute" id="btn-mute" aria-label="靜音">🔊</button>
       </div>
 
       <div class="study-progress">
