--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
         <p class="app-subtitle">Sight Word 字卡學習</p>
       </header>
 
+      <div class="tab-bar" id="tab-bar">
+        <button class="tab active" data-mode="sight">📖 Sight Words</button>
+        <button class="tab" data-mode="phonics">🔤 自然發音</button>
+      </div>
+
       <div class="level-grid" id="level-grid">
-        <!-- Dynamically generated from words.js -->
+        <!-- Dynamically generated -->
       </div>
 
       <div class="total-stats">
@@ -70,6 +75,7 @@
             <button class="btn-speak" id="btn-speak-back" aria-label="朗讀">🔊</button>
             <div class="card-back-word" id="card-back-word">hello</div>
             <div class="card-meaning" id="card-meaning">你好</div>
+            <div class="card-rule" id="card-rule" style="display:none;"></div>
             <div class="card-example">
               <div class="card-example-en" id="card-example-en">Hello, how are you?</div>
               <div class="card-example-zh" id="card-example-zh">你好，你好嗎？</div>
@@ -124,6 +130,7 @@
   <div class="star-burst" id="star-burst"></div>
 
   <script src="words.js"></script>
+  <script src="phonics.js"></script>
   <script src="app.js"></script>
 </body>
 
